# VidyanshPortfolio

./: package-lock.json  package.json  tailwind.config.js  vercel.json
.github/workflows/: backend-deploy.yml  main.yml
Backend/: Readme.md  blog.db  main.py  pyproject.toml  requirements.txt  vercel.json
Backend/app/: crud.py  database.py  main.py  models.py  schemas.py
Backend/app/routes/: blog.py
Client/: package-lock.json
Client/src/components/: BlogListPage.jsx  Contact.jsx  Hero.jsx  SelectedWork.jsx  Skills.jsx
Client/src/hooks/: useBlogs.js  useProjects.js
Client/src/services/: api.js
public/: index.html  manifest.json
src/: App.js  index.css
src/components/: About.jsx  BlogAdminPage.jsx  BlogDetailsPage.jsx  BlogList.jsx  Contact.jsx  Footer.jsx  GlobalStyles.jsx  Hero.jsx  Navbar.jsx  ProjectPage.jsx  Projects.jsx  SelectedWork.jsx  Skills.jsx
src/hooks/: useBlogs.js
src/services/: api.js
