[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["vidyansh07 <vidyansht@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pymongo = "^4.10.1"
pydantic = "^2.9.2"
pydantic-mongo = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
